add react for frontend